# TradeMonster

./: .env  README.md  app.py  ddl.sql  docker-compose.yaml  env.example  logger.py  main.py  pyproject.toml
analysis/: relative_strength.py
collector/: collector.py  etf_collector.py
database/: etf_mapper.py  models.py  sector_type.py
docs/: ideas.md  scheme.md  strategy.md  tree.md  경기국면_섹터_정리.md  데이터_리스트.md
sql/: ddl.sql
src/: app.py  main.py
src/analysis/: __init__.py  relative_strength.py  trend_analysis.py
src/collector/: base.py  collectors.py  main.py
src/collector/etf/: ETF_상위10_구성요소_가중치합.md  price_history_collector.py  us_etf_collector.py  us_etf_component_collector.py  us_etf_price_collector.py
src/config/: config.py
src/database/: etf_mapper.py  models.py  sector_type.py  session.py
src/mcp/: __init__.py  schemas.py  server.py
src/mcp/tools/: __init__.py  portfolio.py  signals.py  stock_info.py  technical.py
src/strategy/: signals.py
src/utils/: __init__.py  config.py  logger.py
src/visualization/: charts.py
strategy/: backtesting.py  signals.py
tests/: test_mcp_server.py
tests/database/: test_models.py
