[project]
name = "trademonster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.6",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-timescaledb>=0.4.1",
    "yfinance>=0.2.57",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
